<resources>
  <string name="app_name">Interphone</string>
  <string name="noBluetooth">无法打开蓝牙</string>
  <string name="bluetooth_notfound">未发现设备</string>
  <string name="bluetooth_scan">搜索</string>
  <string name="device_list">设备列表</string>
  <string name="back">返回</string>
  <string name="no">取消</string>
  <string name="yes">确认</string>
  <string name="btn_sms">短信</string>
  <string name="btn_channelData">信道属性</string>
  <string name="btn_proterty">本机参数</string>
  <string name="btn_send">发送</string>
  <string name="btn_read">读取</string>
  <string name="text_channel_power">功率</string>
  <string name="text_channel_type">信道类型</string>
  <string name="text_rate_receive">接收频率</string>
  <string name="text_rate_send">发射频率</string>
  <string name="text_analogToneBand">宽窄带</string>
  <string name="text_analogToneReceive">接收亚音</string>
  <string name="text_analogToneSend">发送亚音</string>
  <string name="text_numberLinkMen">联系人</string>
  <string name="text_numberToneSlot">时隙</string>
  <string name="text_numberToneColor">色码</string>
  <string name="text_sms">短信</string>
  <string name="text_proterty_VHF">VHF/UHF</string>
  <string name="text_proterty_pttid">用户Id</string>
  <string name="text_proterty_vox">VOL</string>
  <string name="text_proterty_tot">TOT/s</string>
  <string name="text_power_low">低功率</string>
  <string name="text_power_middle">中功率</string>
  <string name="text_power_high">高功率</string>
  <string name="date_error">数据错误</string>
  <string name="btn_powerTest">调功率</string>
  <string name="noLink">请先连接设备</string>
  <string name="input_password">请输入密码</string>
  <string name="password_error">密码错误</string>
  <string name="save">保存成功</string>
  <string name="text_sms_receiver">接收人</string>
  <string name="text_sms_hint">000000为群发</string>
  <string name="text_sms_receiver_error">请输入完整接收id</string>
  <string name="text_sms_tolong">短信太长</string>
  <string name="text_data_error">数据错误</string>
  <string name="toast_linked">连接成功</string>
  <string name="toast_linking">连接中</string>
  <string name="toast_link_lost">断开连接</string>
  <string name="btn_save">保存</string>
  <string name="text_list_paries">已配对设备</string>
  <string name="text_list_scan">搜索新设备</string>
  <string name="btn_usb">USB_OTG</string>
  <string name="not_support_usb">手机不支持USB HOST，请更换其他手机再试</string>
  <string name="text_proterty_activityChannelId">当前活动信道</string>
  <string name="text_status_tx">TX</string>
  <string name="text_status_idel">Idel</string>
  <string name="text_status_rx">RX</string>
  <string name="text_device_id">用户ID</string>
  <string name="text_device_serialNumber">序列号</string>
  <string name="btn_read_list">读取短信列表</string>
  <string name="btn_send_list">发送短信列表</string>
  <string name="text_UHF">UHF</string>
  <string name="text_VHF">VHF</string>
  <string name="text_device_mode">机器型号</string>
  <string name="btn_monitor">Monitor</string>
  <string name="btn_scan">Scan</string>
  <string name="btn_ptt">PTT</string>
  <string name="text_scanRate">扫描频率:</string>
  <string name="text_vol">音    量:</string>
  <string name="toast_device_id_error">输入6位用户id</string>
  <string name="btn_readFile">读文件</string>
  <string name="btn_saveFile">存文件</string>
  <string name="toast_not_empty">不能为空</string>
</resources>
