<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:orientation="vertical"
    tools:context="com.interphone.activity.HomeActivity">

    <include layout="@layout/layout_title"></include>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">


    <RadioGroup
        android:id="@+id/rg_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_TX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/text_status_tx"/>

        <RadioButton
            android:id="@+id/rb_RX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/text_status_rx"/>

        <RadioButton
            android:id="@+id/rb_idel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:checked="true"
            android:text="@string/text_status_idel"/>

    </RadioGroup>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_ptt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_ptt"
                />

            <Button
                android:id="@+id/btn_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_scan"
                />

            <Button
                android:id="@+id/btn_monitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_monitor"
                />

            <Button
                android:id="@+id/btn_usbOTG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:text="USB OTG"/>

            </LinearLayout>



        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_proterty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_proterty"
                />

            <Button
                android:id="@+id/btn_channelData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_channelData"
                />

            <Button
                android:id="@+id/btn_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_sms"
                />

            <Button
                android:id="@+id/btn_powerTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_powerTest"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
