<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

  <include layout="@layout/layout_title"></include>

  <CheckBox
      android:id="@+id/cb_hf"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="20dp"
      android:checked="true"
      android:padding="8dp"
      android:text="@string/text_UHF"
      />

  <ListView
      android:id="@+id/listView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      ></ListView>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:paddingTop="2dp"
      android:paddingBottom="2dp"
      android:background="@color/bg_layout"
      android:orientation="horizontal"
      android:gravity="center_horizontal"
      >
    <Button
        android:id="@+id/btn_read"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/btn_read"
        />



    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/btn_send"
        />

    <Button
        android:id="@+id/btn_saveFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/btn_saveFile"
        />


    <Button
        android:id="@+id/btn_readFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/btn_readFile"
        />



  </LinearLayout>

</LinearLayout>
