<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



    <include layout="@layout/layout_title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/layout_title"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sms_receiver"
            />

        <EditText
            android:id="@+id/et_sms_receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_sms_hint"
            android:maxLength="6"
            style="@style/edittext"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/etSms"
        android:padding="20dp"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />


    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
    android:layout_marginBottom="20dp"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/btn_read_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/btn_read_list"
        />



    <Button
        android:id="@+id/btn_send_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/btn_send_list"
        />



        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/btn_send"
            android:background="@drawable/btn_selector"
            />


</LinearLayout>

</RelativeLayout>
