<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/bg_activity">

  <include layout="@layout/layout_title"></include>

  <Button
      android:id="@+id/btn_usb"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_usb"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_list_paries"
      />
  <ListView
      android:id="@+id/pariesListView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      ></ListView>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_list_scan"
      />
  <ListView
      android:id="@+id/listView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      ></ListView>


  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        />

    <Button android:id="@+id/btn_scan"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/bluetooth_scan"
      ></Button>


  </RelativeLayout>



</LinearLayout>
