<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

  <include layout="@layout/layout_title"></include>

  <Spinner
      android:id="@+id/spinner_channel"
      android:layout_width="@dimen/spinner_width"
      android:layout_height="@dimen/layout_height"
      style="@style/spinner"
      ></Spinner>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        >

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/layout_height"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_channel_type"
            />

        <Spinner
            android:id="@+id/spinner_channel_type"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />

      </RelativeLayout>

      <include layout="@layout/layout_channel_type"></include>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/layout_height"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_rate_receive"
            />

        <EditText
            android:id="@+id/et_rate_receive"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:maxLength="8"
            android:inputType="numberDecimal"
            style="@style/edittext"
            ></EditText>

      </RelativeLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/layout_height"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_rate_send"
            />

        <EditText
            android:id="@+id/et_rate_send"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:maxLength="8"
            style="@style/edittext"
            android:inputType="numberDecimal"
            ></EditText>

      </RelativeLayout>

      <LinearLayout
          android:id="@+id/layout_analogToneReceive"
          android:layout_width="match_parent"
          android:layout_height="@dimen/layout_height"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          >
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_analogToneReceive"
            />

        <TextView
            android:id="@+id/tv_analogToneReceive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/text_analogToneReceive"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_right"
            />
      </LinearLayout>


      <LinearLayout
          android:id="@+id/layout_analogToneSend"
          android:layout_width="match_parent"
          android:layout_height="@dimen/layout_height"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_analogToneSend"
            />

        <TextView
            android:id="@+id/tv_analogToneSend"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_analogToneSend"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_right"
            />

      </LinearLayout>


      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/layout_height"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_channel_power"
            />

        <Spinner
            android:id="@+id/spinner_power"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            ></Spinner>

      </RelativeLayout>

    </LinearLayout>

  </ScrollView>

  <include layout="@layout/layout_bottom"></include>

</LinearLayout>
